--- a/Transend/res/values/strings.xml
+++ b/Transend/res/values/strings.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Transend</string>
+    <string-array name="Places_array">
+        <item>Home</item>
+        <item>Office</item>
+        <item>Movies</item>
+    </string-array>
 </resources>
